Edited contact on menu

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-573-eduwell
                           <li><a href="index.html" class="active">Home</a></li>
                           <li><a href="about.html">About Me</a></li>
                           <li><a href="services.html">Services</a></li>
-                          <li><a href="contact.html">Contact Us</a></li> 
+                          <li><a href="contact.html">Contact</a></li> 
                       </ul>        
                       <a class='menu-trigger'>
                           <span>Menu</span>
