--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ End of head section
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html" class="active">About Me</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li> 
+                    <li><a href="contact.html">Contact</a></li> 
                 </ul>        
                 <a class='menu-trigger'>
                     <span>Menu</span>
