--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ https://templatemo.com/tm-573-eduwell
           <div class="section-heading">
             <h6>Get info</h6>
             <h4>Read More <em>About Me</em></h4>
-            <p>I have had the pleasure of working as a Marriage & Family Therapist since 2016—both as an intern and a licensed therapist. I earned my Masters in Clinical Psychology at The United States International University and my Bachelors in Psychology  at the same institution. After earning my Masters in Counseling, I volunteered at several organizations including marriage cousellors Ke.
+            <p>I have had the pleasure of working as a Marriage & Family Therapist since 2016—both as an intern and as a licensed therapist. I earned my Masters in Clinical Psychology at The United States International University and my Bachelors in Psychology  at the same institution. After earning my Masters in Counseling, I volunteered at several organizations including marriage cousellors Kenya.
               <br><br>I continue to take classes as I am currently pursuing my PHD at United States International University, workshops, and seminars that focus on individual psychotherapy, family counseling, neuroscience, and psychopharmacology in order to stay abreast in the field of Marriage and Family Therapy. Education is very important to me in order to provide the best possible service to my clients.</p>
           </div>
           <div class="row">
