First changes and test form

--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-573-eduwell
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
                     <li><a href="services.html" class="active">Services</a></li>
-                    <li><a href="contact.html">Contact Us</a></li> 
+                    <li><a href="contact.html">Contact</a></li> 
                 </ul>        
                 <a class='menu-trigger'>
                     <span>Menu</span>
@@ -86,7 +86,6 @@ https://templatemo.com/tm-573-eduwell
                 <div class="col-lg-3">
                   <div class="menu">
                     <div class="active gradient-border"><span>Counseling for Anxiety</span></div>
-                    <div class="gradient-border"><span>EMDR</span></div>
                     <div class="gradient-border"><span>Individual Therapy</span></div>
                     <div class="gradient-border"><span>Life Transitions</span></div>
                   </div>
@@ -113,27 +112,6 @@ https://templatemo.com/tm-573-eduwell
                             </p>
                           <span>6 sessions</span>
                           <span>4 Weeks</span>
-                          <span class="last-span"></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img src="assets/images/courses-02.jpg" alt="">
-                          <div class="price"><h6>$156</h6></div>
-                        </div>
-                        <div class="right-content">
-                          <h4>EMDR</h4>
-                          <p>I am an EMDR-trained therapist (Eye Movement Desensitization and Reprocessing) and frequently use this technique when working with clients who are suffering from trauma, anxiety, panic, disturbing memories, post traumatic stress, and other emotional problems. In the past, these conditions were difficult and time-consuming to treat. EMDR therapy often has been found to help the client heal more rapidly and provide lasting relief for many types of emotional distress.
-
-                            <br>After using EMDR in one or more sessions, clients report feeling as if a heavy burden has been lifted from their shoulders. Many people have been held back for years by unresolved issues that have kept them from enjoying their current life. EMDR has demonstrated dramatic and lasting results and is backed by research, as well as by individuals who have experienced the results.
-                            </p>
-                          <span>4 sessions</span>
-                          <span>6 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
                             <a href="contact-us.html">Get in touch</a>
