--- a/index.html
+++ b/index.html
@@ -87,12 +87,7 @@ https://templatemo.com/tm-573-eduwell
   <section class="get-info">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <div class="left-image">
-            <img src="assets/images/about-left-image.png" alt="">
-          </div>
-        </div>
-        <div class="col-lg-6 align-self-center">
+        <div class="col-lg-12 align-self-center">
           <div class="section-heading">
             <h6>Get info</h6>
             <h4>Read More <em>About Me</em></h4>
@@ -106,8 +101,7 @@ https://templatemo.com/tm-573-eduwell
                   <img src="assets/images/service-icon-01.png" alt="">
                 </div>
                 <h4>My Approach</h4>
-                <p>I take a holistic approach to therapy, concerned with the overall long-term well-being of the individual and their family. <br>I work with clients on partner relational issues, family of origin conflict, anxiety, depression, low self-esteem, and other issues in a safe, supportive, and non-judgmental environment.<br> I practice EMDR, Brainspotting, Acceptance and Commitment Therapy (ACT), Emotionally Focused Therapy (EFT), and Cognitive Behavioral Therapy (CBT), each depending upon the issues we are addressing.
-                  </p>
+                <p>I take a holistic approach to therapy, concerned with the overall long-term well-being of the individual and their family. <br>I work with clients on partner relational issues, family of origin conflict, anxiety, depression, low self-esteem, and other issues in a safe, supportive, and non-judgmental environment.</p>
               </div>
             </div>
             <div class="col-lg-6">
@@ -149,7 +143,6 @@ https://templatemo.com/tm-573-eduwell
                 <div class="col-lg-3">
                   <div class="menu">
                     <div class="active gradient-border"><span>Counseling for Anxiety</span></div>
-                    <div class="gradient-border"><span>EMDR</span></div>
                     <div class="gradient-border"><span>Individual Therapy</span></div>
                     <div class="gradient-border"><span>Life Transitions</span></div>
                   </div>
@@ -176,27 +169,6 @@ https://templatemo.com/tm-573-eduwell
                             </p>
                           <span>6 sessions</span>
                           <span>4 Weeks</span>
-                          <span class="last-span"></span>
-                          <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
-                          </div>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <div class="left-image">
-                          <img src="assets/images/courses-02.jpg" alt="">
-                          <div class="price"><h6>$156</h6></div>
-                        </div>
-                        <div class="right-content">
-                          <h4>EMDR</h4>
-                          <p>I am an EMDR-trained therapist (Eye Movement Desensitization and Reprocessing) and frequently use this technique when working with clients who are suffering from trauma, anxiety, panic, disturbing memories, post traumatic stress, and other emotional problems. In the past, these conditions were difficult and time-consuming to treat. EMDR therapy often has been found to help the client heal more rapidly and provide lasting relief for many types of emotional distress.
-
-                            <br>After using EMDR in one or more sessions, clients report feeling as if a heavy burden has been lifted from their shoulders. Many people have been held back for years by unresolved issues that have kept them from enjoying their current life. EMDR has demonstrated dramatic and lasting results and is backed by research, as well as by individuals who have experienced the results.
-                            </p>
-                          <span>4 sessions</span>
-                          <span>6 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
                             <a href="contact-us.html">Get in touch</a>
@@ -339,7 +311,7 @@ https://templatemo.com/tm-573-eduwell
           <div id="map">
           
             <!-- You just need to go to Google Maps for your own map point, and copy the embed code from Share -> Embed a map section -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31910.513393397945!2d36.77978982537385!3d-1.2854898349231563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1a0dfd90fa55%3A0x37f5057a6f21bc7c!2sKilimani%2C%20Nairobi!5e0!3m2!1sen!2ske!4v1645358296429!5m2!1sen!2ske" width="100%" height="420px" frameborder="0" style="border:0; border-radius: 15px; position: relative; z-index: 2;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.805277498612!2d36.7941395139964!3d-1.2911721990582627!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10bc6ef7b513%3A0xd72296b4480d7972!2sInternational%20Leadership%20University!5e0!3m2!1sen!2ske!4v1645515096324!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <div class="row">
               <div class="col-lg-4 offset-lg-1">
                 <div class="contact-info">
@@ -363,7 +335,7 @@ https://templatemo.com/tm-573-eduwell
           </div>
         </div>
         <div class="col-lg-4">
-          <form id="contact" action="" method="post">
+          <form id="contact" action="mailto:brimwene@gmail.com" method="post" enctype="text/plain">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
