Change link to contact page

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -197,7 +197,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -226,7 +226,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -256,7 +256,7 @@ https://templatemo.com/tm-573-eduwell
             <br>I will meet your specific needs in a way that is collaborative, comfortable, and conscientious. I will work with you and for you to ensure that you are meeting your individual therapeutic goals and becoming the person you’ve always been capable of being.
             </p>
           <div class="white-button">
-            <a href="contact-us.html">Reach out today</a>
+            <a href="contact.html">Reach out today</a>
           </div>
         </div>
       </div>
@@ -371,7 +371,7 @@ https://templatemo.com/tm-573-eduwell
           <ul class="social-icons">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/doreen-njagi-39590a78/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fa fa-rss"></i></a></li>
             <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
           </ul>
