--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@ End of head section
           <ul class="social-icons">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/doreen-njagi-39590a78/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fa fa-rss"></i></a></li>
             <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
           </ul>
