--- a/services.html
+++ b/services.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -140,7 +140,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -169,7 +169,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -228,7 +228,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get im touch</a>
+                            <a href="contact.html">Get im touch</a>
                           </div>
                         </div>
                       </div>
@@ -259,7 +259,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>6 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -294,7 +294,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -319,7 +319,7 @@ https://templatemo.com/tm-573-eduwell
                           <span>4 Weeks</span>
                           <span class="last-span"></span>
                           <div class="text-button">
-                            <a href="contact-us.html">Get in touch</a>
+                            <a href="contact.html">Get in touch</a>
                           </div>
                         </div>
                       </div>
@@ -353,7 +353,7 @@ https://templatemo.com/tm-573-eduwell
               <li>- Reasearch.</li>
             </ul>
             <div class="main-button-gradient">
-              <a href="our-services.html">Check out my Services</a>
+              <a href="services.html">Check out my Services</a>
             </div>
           </div>
         </div>
@@ -371,7 +371,7 @@ https://templatemo.com/tm-573-eduwell
           <ul class="social-icons">
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/doreen-njagi-39590a78/"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fa fa-rss"></i></a></li>
             <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
           </ul>
