--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ https://templatemo.com/tm-573-eduwell
             </div>
             <div class="item">
               <p>“Was having a hard time dealing with prevous occurances but trust her methodology. Really came through for me”</p>
-                <h4>Ananymous</h4>
+                <h4>Anonymous</h4>
                 <span>Nairobi, Kenya</span>
                 <img src="assets/images/quote.png" alt="">
             </div>
