--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-eduwell-style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="assets/css/video.css">
 <!--
 
 End of head section
@@ -59,19 +60,23 @@ End of head section
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <section class="page-heading">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="header-text">
-            <h1>About Me</h1>
+  <section class="main-banner" id="top" style="max-height: 20vh;">
+    <div class="video-container">
+      
+      <div class="col-lg-6 align-self-center">
+        <div class="header-text">
+          <iframe class="responsive-iframe" loading="lazy" src="https://www.youtube.com/embed/txlGT9GLu1Q?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h2>About Me</h2>
+          <h6>Learn more about me</h6>
+          <div class="main-button-gradient" style="margin-top: 10px;  margin-bottom: 50px;">
+            <div class="scroll-to-section"><a href="#contact-section">Get in touch today!</a></div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="get-info">
+  <section class="get-info" style="padding-top: 80vh;">
     <div class="container">
       <div class="row">
         <div class="col-lg-6">
