--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-eduwell-style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="assets/css/video.css">
 <!--
 
 TemplateMo 573 EduWell
@@ -61,19 +62,23 @@ https://templatemo.com/tm-573-eduwell
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <section class="page-heading">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="header-text">
-            <h1>Get in touch</h1>
+  <section class="main-banner" id="top" style="max-height: 20vh;">
+    <div class="video-container">
+      
+      <div class="col-lg-6 align-self-center">
+        <div class="header-text">
+          <iframe class="responsive-iframe" loading="lazy" src="https://www.youtube.com/embed/txlGT9GLu1Q?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h2>Contact</h2>
+          <h6>Swap burning out for a fire within</h6>
+          <div class="main-button-gradient" style="margin-top: 10px;  margin-bottom: 50px;">
+            <div class="scroll-to-section"><a href="#contact-section">Get in touch today!</a></div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="contact-us" id="contact-section">
+  <section class="contact-us" id="contact-section" style="padding-top: 80vh;">
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
@@ -110,7 +115,7 @@ https://templatemo.com/tm-573-eduwell
                 <div class="section-heading">
                   <h6>Contact us</h6>
                   <h4>Say <em>Hello</em></h4>
-                  <p>If you need someone to talk to or have any enquiries, feel free to reach out</p>
+                  <p>Contact us today and start the journey of being the best version of yourself</p>
                 </div>
               </div>
               <div class="col-lg-12">
