--- a/services.html
+++ b/services.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-eduwell-style.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/lightbox.css">
+    <link rel="stylesheet" href="assets/css/video.css">
 <!--
 
 TemplateMo 573 EduWell
@@ -59,24 +60,28 @@ https://templatemo.com/tm-573-eduwell
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <section class="page-heading">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="header-text">
+  <section class="main-banner" id="top" style="max-height: 20vh;">
+    <div class="video-container">
+      
+      <div class="col-lg-6 align-self-center">
+        <div class="header-text">
+          <iframe class="responsive-iframe" loading="lazy" src="https://www.youtube.com/embed/DAlzlebbdPo?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h2>Services</h2>
+          <h6>What we offer</h6>
+          <div class="main-button-gradient" style="margin-top: 10px;  margin-bottom: 50px;">
+            <div class="scroll-to-section"><a href="#contact-section">Get in touch today!</a></div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="our-courses" id="courses">
+  <section class="our-courses" id="courses" style="padding-top: 80vh;">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 offset-lg-3">
           <div class="section-heading">
-            <h6>SERVICES</h6>
-            <h4>Why<em>Espoir Wellness</em></h4>
+            <h4>Reach out to<em>Us for...</em></h4>
           </div>
         </div>
         <div class="col-lg-12">
