--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@ End of head section
           <div class="section-heading">
             <h6>Get info</h6>
             <h4>Doreen <em>Njagi</em></h4>
-            <p>I have had the pleasure of working as a Marriage & Family Therapist since 2016—both as an intern and a licensed therapist. I earned my Masters in Clinical Psychology at The United States International University and my Bachelors in Psychology  at the same institution. After earning my Masters in Counseling, I volunteered at several organizations including marriage cousellors Ke.
+            <p>I offer psychotherapeutic interventions and mental heath care for clients going through wide range of clinical issues such as depression, anxiety, trauma, relationship/marital, and grief.<br> I am a volunteer at Faraja Cancer Support Trust where I offer individual and group therapy sessions for cancer patients and caregivers.
               <br><br>I continue to take classes as I am currently pursuing my PHD at United States International University, workshops, and seminars that focus on individual psychotherapy, family counseling, neuroscience, and psychopharmacology in order to stay abreast in the field of Marriage and Family Therapy. Education is very important to me in order to provide the best possible service to my clients.</p>
           </div>
           <div class="row">
