--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ https://templatemo.com/tm-573-eduwell
           <div class="section-heading">
             <h6>About Doreen Njagi</h6>
             <h4>Consultant <em>clinical Psychologist</em></h4>
-            <p>I offer psychotherapeutic interventions and mental heath care for clients going through wide range of clinical issues such as depression, anxiety, trauma, relationship/marital, and grief.<br> Am a volunteer at Faraja Cancer Support Trust where I offer individual and group therapy sessions for cancer patients and caregivers.</p>
+            <p>I offer psychotherapeutic interventions and mental heath care for clients going through wide range of clinical issues such as depression, anxiety, trauma, relationship/marital, and grief.<br> I am a volunteer at Faraja Cancer Support Trust where I offer individual and group therapy sessions for cancer patients and caregivers.</p>
           </div>
           <div class="row">
             <div class="col-lg-6">
